feat: support service application protocol
This change adds support for `service.appProtocol` and
`metrics.service.appProtocol` which allow users to specify the
application protocol for the service port. This is useful for certain
scenarios where the application protocol needs to be explicitly defined,
such as when using Istio.

Link: https://kubernetes.io/docs/concepts/services-networking/service/#application-protocol
Signed-off-by: Tais P. Hansen <tais.hansen@gmail.com>

--- a/valkey/templates/service.yaml
+++ b/valkey/templates/service.yaml
@@ -21,5 +21,8 @@ spec:
       {{- if and (eq .Values.service.type "NodePort") .Values.service.nodePort }}
       nodePort: {{ .Values.service.nodePort }}
       {{- end }}
+      {{- if .Values.service.appProtocol }}
+      appProtocol: {{ .Values.service.appProtocol }}
+      {{- end }}
   selector:
     {{- include "valkey.selectorLabels" . | nindent 4 }}
