--- a/valkey/templates/metrics-svc.yaml
+++ b/valkey/templates/metrics-svc.yaml
@@ -21,6 +21,9 @@ spec:
       port: {{ .Values.metrics.service.ports.http }}
       protocol: TCP
       targetPort: metrics
+      {{- if .Values.metrics.service.appProtocol }}
+      appProtocol: {{ .Values.metrics.service.appProtocol }}
+      {{- end }}
   selector:
     {{- include "valkey.selectorLabels" . | nindent 4 }}
 {{- end }}
