feat: add support for loadBalancerClass
Allow setting loadBalancerClass for the service.

Signed-off-by: Eugene Maslovich <ehpc@ehpc.io>

--- a/valkey/templates/service.yaml
+++ b/valkey/templates/service.yaml
@@ -13,6 +13,9 @@ spec:
   {{- if .Values.service.clusterIP }}
   clusterIP: {{ .Values.service.clusterIP }}
   {{- end }}
+  {{- if .Values.service.loadBalancerClass }}
+  loadBalancerClass: {{ .Values.service.loadBalancerClass }}
+  {{- end }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: tcp
