--- a/valkey/templates/init_config.yaml
+++ b/valkey/templates/init_config.yaml
@@ -143,6 +143,80 @@ data:
     log "ACL file created with 0400 permissions"
     {{- end }}
 
+    {{- if .Values.replica.enabled }}
+    # Replica mode configuration
+    log "Configuring replication mode"
+
+    # Use POD_INDEX from Kubernetes metadata
+    POD_INDEX=${POD_INDEX:-0}
+    IS_MASTER=false
+
+    # Check if this is pod-0 (master)
+    if [ "$POD_INDEX" = "0" ]; then
+      IS_MASTER=true
+      log "This pod (index $POD_INDEX) is configured as MASTER"
+    else
+      log "This pod (index $POD_INDEX) is configured as REPLICA"
+    fi
+
+    # Configure replica settings
+    if [ "$IS_MASTER" = "false" ]; then
+      MASTER_HOST="{{ include "valkey.fullname" . }}-0.{{ include "valkey.headlessServiceName" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}"
+      MASTER_PORT="{{ .Values.service.port }}"
+
+      log "Configuring replica to follow master at $MASTER_HOST:$MASTER_PORT"
+
+      {
+        echo ""
+        echo "# Replica Configuration"
+        echo "replicaof $MASTER_HOST $MASTER_PORT"
+        echo "replica-announce-ip {{ include "valkey.fullname" . }}-$POD_INDEX.{{ include "valkey.headlessServiceName" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}"
+        {{- if .Values.replica.disklessSync }}
+        echo ""
+        echo "# Diskless replication"
+        echo "repl-diskless-sync yes"
+        echo "repl-diskless-sync-delay 5"
+        {{- end }}
+        {{- if .Values.auth.enabled }}
+        echo ""
+        echo "# Master authentication"
+        {{- end }}
+      } >>"$VALKEY_CONFIG"
+
+      {{- if .Values.auth.enabled }}
+      # Get the password for the replication user
+      {{- $replUsername := .Values.replica.replicationUser }}
+      REPL_PASSWORD=$(get_user_password "{{ $replUsername }}") || exit 1
+
+      # Write masterauth configuration
+      echo "masterauth $REPL_PASSWORD" >>"$VALKEY_CONFIG"
+      echo "masteruser {{ $replUsername }}" >>"$VALKEY_CONFIG"
+      log "Configured masterauth with user {{ $replUsername }}"
+      {{- end }}
+
+      {{- if .Values.tls.enabled }}
+      # TLS for replication
+      {
+        echo ""
+        echo "# TLS for replication"
+        echo "tls-replication yes"
+      } >>"$VALKEY_CONFIG"
+      log "Enabled TLS for replication"
+      {{- end }}
+    fi
+
+    {{- if gt (int .Values.replica.minReplicasToWrite) 0 }}
+    # Write safety - require minimum healthy replicas
+    {
+      echo ""
+      echo "# Minimum replicas for write operations"
+      echo "min-replicas-to-write {{ .Values.replica.minReplicasToWrite }}"
+      echo "min-replicas-max-lag {{ .Values.replica.minReplicasMaxLag }}"
+    } >>"$VALKEY_CONFIG"
+    log "Configured write safety: require {{ .Values.replica.minReplicasToWrite }} replicas with max {{ .Values.replica.minReplicasMaxLag }}s lag"
+    {{- end }}
+    {{- end }}
+
     # Append extra configs if present
     if [ -f /usr/local/etc/valkey/valkey.conf ]; then
       log "Appending /usr/local/etc/valkey/valkey.conf"
