--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -101,7 +101,7 @@ initResources: {}
 # Additional init containers
 extraInitContainers: []
 
-# Persistent storage configuration
+# Persistent storage configuration (standalone deployment only)
 dataStorage:
   # Enable persistent volume claim creation
   enabled: false
@@ -187,6 +187,60 @@ auth:
   # Example:
   # aclConfig: |
   #   user default on >secretpass ~* &* +@all
+
+# Replica configuration for master-replica replication mode
+replica:
+  enabled: false
+
+  # Number of replica instances (total pods = replicas + 1 master)
+  replicas: 2
+
+  # Username for replicas to authenticate to master, ignored if auth.enabled is false.
+  # IMPORTANT: When auth.enabled is true, this user MUST be defined in auth.aclUsers.
+  # The chart requires this to retrieve the password for replica authentication.
+  # The user must have appropriate replication permissions: +psync +replconf +ping
+  replicationUser: "default"
+
+  # Replication settings
+  # Use diskless replication (sync directly from memory) vs disk-based
+  disklessSync: false
+
+  # Write safety - require minimum number of healthy replicas to accept writes
+  # Set to 0 to disable this check, or 1+ to require minimum replicas before accepting writes
+  # This ensures data durability by requiring at least N replicas to be in sync
+  minReplicasToWrite: 0
+
+  # Maximum replication lag in seconds before a replica is considered unhealthy
+  minReplicasMaxLag: 10
+
+  # Read service configuration
+  service:
+    # Enable read service (load balances read traffic across all pods)
+    enabled: true
+    # Service type (ClusterIP, NodePort, LoadBalancer)
+    type: ClusterIP
+    # Port on which the read service will be exposed
+    port: 6379
+    # Optional annotations for the read service
+    annotations: {}
+    # NodePort value (if service.type is NodePort)
+    nodePort: 0
+    # ClusterIP value
+    clusterIP: ""
+    # Application protocol
+    appProtocol: ""
+    # Class of a load balancer implementation
+    loadBalancerClass: ""
+
+  # Persistence configuration (required for replicas)
+  persistence:
+    # Size of the PVC for each replica (required when replica.enabled is true)
+    size: ""
+    # Storage class name (empty = use default storage class)
+    storageClass: ""
+    # Access modes for the PVC
+    accessModes:
+      - ReadWriteOnce
 
 tls:
   # Enable TLS
