--- a/valkey/templates/init_config.yaml
+++ b/valkey/templates/init_config.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "valkey.fullname" . }}-init-scripts
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
 data:
