--- a/valkey/templates/pvc.yaml
+++ b/valkey/templates/pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ include "valkey.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
     {{- with .Values.dataStorage.labels }}
