--- a/valkey/templates/service-read.yaml
+++ b/valkey/templates/service-read.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "valkey.fullname" . }}-read
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
     app.kubernetes.io/component: read
