--- a/valkey/templates/netpolicy.yaml
+++ b/valkey/templates/netpolicy.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: {{ include "valkey.fullname" $ }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ include "valkey.namespace" . }}
   {{- with .labels }}
   labels:
     {{- toYaml . | nindent 4 }}
