--- a/valkey/templates/secret.yaml
+++ b/valkey/templates/secret.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "valkey.fullname" . }}-auth
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ include "valkey.namespace" . }}
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
 type: Opaque
