--- a/valkey/templates/service.yaml
+++ b/valkey/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "valkey.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ include "valkey.namespace" . }}
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
     app.kubernetes.io/component: primary
