--- a/valkey/templates/serviceaccount.yaml
+++ b/valkey/templates/serviceaccount.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "valkey.serviceAccountName" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ include "valkey.namespace" . }}
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
