fix: render auth checksum as annotation
Add a checksum of the auth secret to the Deployment/Statefulset
to ensure a new rollout of Valkey if the auth secret changed.

This follows the existing pattern for the init and regular
valkey configuration.

Signed-off-by: Clemens Beck <mail@beckcl.dev>

--- a/valkey/templates/deploy_valkey.yaml
+++ b/valkey/templates/deploy_valkey.yaml
@@ -30,9 +30,12 @@ spec:
         {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
-        checksum/initconfig: {{ include (print $.Template.BasePath "/init_config.yaml") . | sha256sum | trunc 32 }}
+        checksum/initconfig: {{ include (print $.Template.BasePath "/init_config.yaml") . | sha256sum | trunc 32 | quote }}
         {{- if .Values.valkeyConfig }}
-        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum | trunc 32 }}
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum | trunc 32 | quote }}
+        {{- end }}
+        {{- if (include "valkey.renderAuthSecret" .) | eq "true" }}
+        checksum/auth-secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum | trunc 32 | quote }}
         {{- end }}
     spec:
       {{- include "valkey.imagePullSecrets" . | nindent 6 }}
