--- a/valkey/templates/secret.yaml
+++ b/valkey/templates/secret.yaml
@@ -1,5 +1,4 @@
-{{- if .Values.auth.enabled }}
-{{- if or (include "valkey.hasInlinePasswords" . | eq "true") .Values.auth.aclConfig }}
+{{- if (include "valkey.renderAuthSecret" .) | eq "true" }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -16,5 +15,4 @@ data:
   {{- if .Values.auth.aclConfig }}
   aclConfig: {{ .Values.auth.aclConfig | b64enc }}
   {{- end }}
-{{- end }}
 {{- end }}
