--- a/valkey/tests/auth_validation_test.yaml
+++ b/valkey/tests/auth_validation_test.yaml
@@ -3,6 +3,7 @@ templates:
   - templates/deploy_valkey.yaml
   - templates/statefulset.yaml
   - templates/init_config.yaml
+  - templates/secret.yaml
 tests:
   - it: should fail when auth enabled but no method configured
     set:
